--- a/GFormAutoFill/GFormAutoFill.csproj
+++ b/GFormAutoFill/GFormAutoFill.csproj
@@ -9,6 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ExcelDataReader" Version="3.8.0" />
+    <PackageReference Include="ExcelDataReader.DataSet" Version="3.8.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.38.0" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="142.0.7444.6100" />
     <PackageReference Include="SeleniumExtras.WaitHelpers" Version="1.0.2" />
